--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "export": "npm run build && next export && mvout _static"
   },
   "engines": {
-    "node": "14.x"
+    "node": "16.16.0"
   },
   "dependencies": {
     "next": "^12.2.2",
